--- a/sections/section-supporting-menu.liquid
+++ b/sections/section-supporting-menu.liquid
@@ -61,7 +61,7 @@
         -%}
 
         <!-- Remove the following line to delete 'Powered by Shopify' from your footer -->
-        <li data-powered-link>{{ powered_by_link }}</li>
+        <!-- <li data-powered-link>{{ powered_by_link }}</li> -->
         <!-- Do not delete below this line -->
       </ul>
     </div>
