--- a/snippets/product-size-chart.liquid
+++ b/snippets/product-size-chart.liquid
@@ -43,6 +43,7 @@
       <div style="display: flex; flex-wrap: wrap; gap: 15px;">
     
         <!-- NEW SIZE GUIDE -->
+        {%- render 'size-chart-modal1' -%}
         {% if size_guide != blank %}
 
           {%- render 'size-chart-modal1' -%}
