--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -435,7 +435,7 @@
                           {%- if upsell_product_List != blank -%}
                             {%- for upsell_product in upsell_product_List -%}
                             {% comment %} {%- render 'upsell-product', upsell_product: upsell_product -%}{% endcomment %}
-                            <div>aa{{ product.metafields.theme.upsell_list }}</div>
+                            <div>aa{{ product.title }}</div>
                             {%- endfor -%}
                           {%- endif -%}
                         {%- endif -%}
