--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -434,6 +434,7 @@
                           {%- endif -%}
 
                           {%- if upsell_product_List != blank -%}
+                            {{ product.title }}
                             {%- for upsell_product in upsell_product_List -%}
                             {% comment %} {%- render 'upsell-product', upsell_product: upsell_product -%}{% endcomment %}
                             <div>aa{{ product.metafields.theme.upsell.value.title }}</div>
