--- a/snippets/cart-line-items.liquid
+++ b/snippets/cart-line-items.liquid
@@ -48,7 +48,7 @@
         <div class="cart__item__content-inner">
           <h4 class="cart__item__title">
             <a href="{{ line_item.url }}">
-              {{- line_item.product.title | strip_html -}}11
+              {{- line_item.product.title | strip_html -}}
             </a>
           </h4>
 
