--- a/snippets/product-size-chart.liquid
+++ b/snippets/product-size-chart.liquid
@@ -51,6 +51,7 @@
         {% if product.tags contains 'BBB' %}
           BBB
           {% else %}
+          AAA
             {%- render 'size-chart-modal1' -%}
         {% endif %}
 
