--- a/snippets/product-size-chart.liquid
+++ b/snippets/product-size-chart.liquid
@@ -44,7 +44,7 @@
     
         <!-- NEW SIZE GUIDE -->
         {% if product.tags contains 'no-size-guide' %}
-          1
+          AAA111
         {% else %}
           {%- render 'size-chart-modal1' -%}
         {% endif %}
