--- a/snippets/product-size-chart.liquid
+++ b/snippets/product-size-chart.liquid
@@ -46,6 +46,7 @@
         {% if product.tags contains 'no-size-guide' %}
           AAA111
         {% else %}
+          BBB222
           {%- render 'size-chart-modal1' -%}
         {% endif %}
 
