--- a/snippets/product-size-chart.liquid
+++ b/snippets/product-size-chart.liquid
@@ -44,7 +44,9 @@
     
         <!-- NEW SIZE GUIDE -->
         {% if product.tags contains 'no-size-guide' %}
+          AAA
         {% else %}
+        BBB
           {%- render 'size-chart-modal1' -%}
         {% endif %}
 
