--- a/snippets/size-chart-modal1.liquid
+++ b/snippets/size-chart-modal1.liquid
@@ -112,10 +112,11 @@
 
 
     .tabcontent-tables {
-
+      text-align: center;
     }
 
     table tr td:first-child {
+      text-align: left;
       font-weight: 500;
     }
 
