--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -271,6 +271,28 @@
         </details>
 
         <form action="{{ routes.cart_url }}" method="post" novalidate class="cart__form" data-cart-form>
+
+          {%- if settings.enable_package_waste_block -%}
+            <details
+              class="cart__widget accordion"
+              data-collapsible
+              data-animation="{{ animation_name }}"
+              data-animation-duration="{{ animation_duration }}"
+              data-animation-delay="{{ animation_delay }}"
+              {%- assign animation_delay = animation_delay | plus: animation_delay_increment -%}>
+              <summary class="cart__widget__title" data-collapsible-trigger>
+              {{ settings.additional_items_text }}
+                {%- render 'icon-plus' -%}
+                {%- render 'icon-minus' -%}
+              </summary>
+              <div class="cart__widget__content" data-collapsible-body>
+                <div class="cart__widget__content__inner" data-collapsible-content>
+              {% render 'reduce-waste' %}
+              </div>
+              </div>
+            </details>
+          {%- endif -%}
+
           {%- if settings.enable_order_notes -%}
             <details
               class="cart__widget accordion"
