--- a/sections/cart.liquid
+++ b/sections/cart.liquid
@@ -711,6 +711,12 @@
       "unit": "px",
       "label": "Padding bottom",
       "default": 50
+    },
+    {
+      "type": "text",
+      "id": "additional_items_text",
+      "label": "Text for checkboxes",
+      "default": "We are reducing package waste:"
     }
   ],
   "blocks": [
