--- a/snippets/media.liquid
+++ b/snippets/media.liquid
@@ -100,7 +100,7 @@
               when 'model'
                 echo media | model_viewer_tag: image_size: image_size, toggleable: true, data-model-id: media.id
               when 'video'
-              echo media | media_tag: image_size: image_size, class: 'media-video', autoplay: true, loop: enable_video_looping, muted: true, controls: true, preload: 'none'
+              echo media | media_tag: image_size: image_size, class: 'media-video', autoplay: true, loop: enable_video_looping, controls: true, preload: 'none'
               when 'external_video'
                 if media.host == 'youtube'
                   echo media | external_video_url: autoplay: true, playsinline: true, loop: enable_video_looping, playlist: media.external_id | external_video_tag: loading: 'lazy', data-host: media.host
