--- a/sections/article.liquid
+++ b/sections/article.liquid
@@ -51,7 +51,7 @@
   style="{{ style }}">
   <div class="article__hero text-center">
     <div class="wrapper">
-      <h1 class="article__title h3">{{ article.title }a</h1>
+      <h1 class="article__title h3">{{ article.title }}</h1>
 
       {%- if show_date or show_author -%}
         <p class="article__meta">
