--- a/sections/section-highlights.liquid
+++ b/sections/section-highlights.liquid
@@ -141,7 +141,7 @@
             capture item_inner_classes
               echo 'highlights__item-inner'
               if blocks_style == 'button'
-                echo ' btn btn--outline btn--large'
+                echo ' btn-customized btn--outline btn--large'
                 unless link != blank
                   echo ' is-disabled'
                 endunless
